--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
-/a.config
+config.txt
 
 /readme.html
 /license.txt
